# Backseat_coaching

backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  storage.py
backend/app/routers/: jobs.py  results.py  uploads.py
backend/app/worker/: celery_app.py  tasks.py
frontend/next-up/: package-lock.json  package.json
frontend/next-up/app/: page.tsx
infra/: docker-compose.yml
